syntax="proto3";
package user_rpc;

message UserRequest{
    int64 id = 1;
    string name = 2;
    string username = 3;
    string email = 4;
    string password = 5;
}

message UserResponse{
    bool status = 1;
    optional string constraint = 2;
    optional int64 id = 3;
}

service UserServiceRpc {
    rpc create(UserRequest) returns (UserResponse);
}